Add directional and spatial view cell example notebooks
Added new example notebooks for directional place fields and spatial view cells in both docs and main examples. Renamed and reorganized directional place field scripts, updated video overlay examples to remove unnecessary noqa comments, and updated mkdocs.yml to include new documentation files. These additions provide comprehensive demonstrations of direction-conditioned and spatial view cell analyses for users.

--- a/docs/examples/03_morphological_operations.ipynb
+++ b/docs/examples/03_morphological_operations.ipynb
@@ -329,7 +329,7 @@
     }
    ],
    "source": [
-    "import networkx as nx\n",
+    "import networkx as nx  # noqa: E402\n",
     "\n",
     "# Check if environment is connected\n",
     "is_connected = nx.is_connected(env_default.connectivity)\n",
