--- a/docs/examples/18_video_overlay.ipynb
+++ b/docs/examples/18_video_overlay.ipynb
@@ -218,6 +218,9 @@
     "\n",
     "fields = np.array(fields)\n",
     "\n",
+    "# Create frame_times (required for animate_fields)\n",
+    "frame_times = np.arange(n_frames) / video_fps  # seconds\n",
+    "\n",
     "print(f\"Trajectory: {n_frames} frames\")\n",
     "print(\n",
     "    f\"Trajectory range: x=[{trajectory[:, 0].min():.1f}, {trajectory[:, 0].max():.1f}], y=[{trajectory[:, 1].min():.1f}, {trajectory[:, 1].max():.1f}]\"\n",
@@ -629,6 +632,7 @@
     "    viewer = env.animate_fields(\n",
     "        fields,\n",
     "        overlays=[video_overlay, position_overlay],\n",
+    "        frame_times=frame_times,\n",
     "        backend=\"napari\",\n",
     "        fps=video_fps,\n",
     "        title=\"Video + Field Animation\",\n",
@@ -682,6 +686,7 @@
     "    result = env.animate_fields(\n",
     "        fields,\n",
     "        overlays=[video_overlay, position_overlay],\n",
+    "        frame_times=frame_times,\n",
     "        backend=\"video\",\n",
     "        save_path=output_path,\n",
     "        fps=video_fps,\n",
