--- a/examples/01_introduction_basics.ipynb
+++ b/examples/01_introduction_basics.ipynb
@@ -56,9 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "a4",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:32.466635Z",
+     "iopub.status.busy": "2025-12-05T21:08:32.466517Z",
+     "iopub.status.idle": "2025-12-05T21:08:34.418280Z",
+     "shell.execute_reply": "2025-12-05T21:08:34.417867Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -86,9 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "a6",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:34.420560Z",
+     "iopub.status.busy": "2025-12-05T21:08:34.420313Z",
+     "iopub.status.idle": "2025-12-05T21:08:34.455327Z",
+     "shell.execute_reply": "2025-12-05T21:08:34.454849Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -139,9 +153,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "a8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:34.457352Z",
+     "iopub.status.busy": "2025-12-05T21:08:34.457167Z",
+     "iopub.status.idle": "2025-12-05T21:08:34.595800Z",
+     "shell.execute_reply": "2025-12-05T21:08:34.595448Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -199,9 +220,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "a10",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:34.597465Z",
+     "iopub.status.busy": "2025-12-05T21:08:34.597349Z",
+     "iopub.status.idle": "2025-12-05T21:08:34.612470Z",
+     "shell.execute_reply": "2025-12-05T21:08:34.612036Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -231,7 +259,7 @@
    "source": [
     "# Create environment with 5 cm bins\n",
     "env = Environment.from_samples(\n",
-    "    data_samples=position_2d,\n",
+    "    positions=position_2d,\n",
     "    bin_size=5.0,  # 5 cm bins\n",
     "    name=\"OpenFieldExample\",\n",
     ")\n",
@@ -271,9 +299,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "a13",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:34.614719Z",
+     "iopub.status.busy": "2025-12-05T21:08:34.614592Z",
+     "iopub.status.idle": "2025-12-05T21:08:34.617300Z",
+     "shell.execute_reply": "2025-12-05T21:08:34.617005Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -313,9 +348,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "a15",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:34.618987Z",
+     "iopub.status.busy": "2025-12-05T21:08:34.618878Z",
+     "iopub.status.idle": "2025-12-05T21:08:34.899093Z",
+     "shell.execute_reply": "2025-12-05T21:08:34.898737Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -369,9 +411,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "a19",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:34.901333Z",
+     "iopub.status.busy": "2025-12-05T21:08:34.901205Z",
+     "iopub.status.idle": "2025-12-05T21:08:34.905908Z",
+     "shell.execute_reply": "2025-12-05T21:08:34.905443Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -415,9 +464,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "a22",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:34.908071Z",
+     "iopub.status.busy": "2025-12-05T21:08:34.907944Z",
+     "iopub.status.idle": "2025-12-05T21:08:34.910640Z",
+     "shell.execute_reply": "2025-12-05T21:08:34.910319Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -450,9 +506,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "a24",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:34.912198Z",
+     "iopub.status.busy": "2025-12-05T21:08:34.912047Z",
+     "iopub.status.idle": "2025-12-05T21:08:34.981137Z",
+     "shell.execute_reply": "2025-12-05T21:08:34.980706Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -500,9 +563,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "a26",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:34.983091Z",
+     "iopub.status.busy": "2025-12-05T21:08:34.982952Z",
+     "iopub.status.idle": "2025-12-05T21:08:34.986155Z",
+     "shell.execute_reply": "2025-12-05T21:08:34.985799Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -545,9 +615,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "a28",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:34.987975Z",
+     "iopub.status.busy": "2025-12-05T21:08:34.987875Z",
+     "iopub.status.idle": "2025-12-05T21:08:34.991038Z",
+     "shell.execute_reply": "2025-12-05T21:08:34.990569Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -590,9 +667,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "a30",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:34.992890Z",
+     "iopub.status.busy": "2025-12-05T21:08:34.992772Z",
+     "iopub.status.idle": "2025-12-05T21:08:35.067670Z",
+     "shell.execute_reply": "2025-12-05T21:08:35.067262Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -679,9 +763,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "a32",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:35.069353Z",
+     "iopub.status.busy": "2025-12-05T21:08:35.069187Z",
+     "iopub.status.idle": "2025-12-05T21:08:35.127420Z",
+     "shell.execute_reply": "2025-12-05T21:08:35.127091Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -690,9 +781,22 @@
       "\n",
       "Bin size = 2.5 cm:\n",
       "  Total bins: 684\n",
-      "  Grid shape: (35, 35)\n",
+      "  Grid shape: (35, 35)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
-      "Bin size = 5.0 cm:\n",
+      "Bin size = 5.0 cm:"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "  Total bins: 211\n",
       "  Grid shape: (18, 18)\n",
       "\n",
@@ -709,7 +813,7 @@
     "\n",
     "for bin_size in bin_sizes:\n",
     "    envs[bin_size] = Environment.from_samples(\n",
-    "        data_samples=position_2d, bin_size=bin_size, name=f\"OpenField_{bin_size}cm\"\n",
+    "        positions=position_2d, bin_size=bin_size, name=f\"OpenField_{bin_size}cm\"\n",
     "    )\n",
     "    print(f\"\\nBin size = {bin_size} cm:\")\n",
     "    print(f\"  Total bins: {envs[bin_size].n_bins}\")\n",
@@ -718,9 +822,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "a33",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:35.129169Z",
+     "iopub.status.busy": "2025-12-05T21:08:35.129044Z",
+     "iopub.status.idle": "2025-12-05T21:08:36.009580Z",
+     "shell.execute_reply": "2025-12-05T21:08:36.009251Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -772,15 +883,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "a36",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:36.011493Z",
+     "iopub.status.busy": "2025-12-05T21:08:36.011376Z",
+     "iopub.status.idle": "2025-12-05T21:08:36.014854Z",
+     "shell.execute_reply": "2025-12-05T21:08:36.014560Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# This will fail!\n",
     "try:\n",
     "    bad_env = Environment.from_samples(\n",
-    "        data_samples=position_2d,\n",
+    "        positions=position_2d,\n",
     "        bin_size=200.0,  # 200 cm - way too large!\n",
     "        name=\"TooBig\",\n",
     "    )\n",
@@ -801,9 +919,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "a38",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:36.016269Z",
+     "iopub.status.busy": "2025-12-05T21:08:36.016176Z",
+     "iopub.status.idle": "2025-12-05T21:08:36.017857Z",
+     "shell.execute_reply": "2025-12-05T21:08:36.017617Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -836,9 +961,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "a40",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:36.019059Z",
+     "iopub.status.busy": "2025-12-05T21:08:36.018981Z",
+     "iopub.status.idle": "2025-12-05T21:08:36.032134Z",
+     "shell.execute_reply": "2025-12-05T21:08:36.031858Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -853,7 +985,7 @@
     "# env = Environment()  # This won't work!\n",
     "\n",
     "# ✓ CORRECT - Use factory methods\n",
-    "env_correct = Environment.from_samples(data_samples=position_2d, bin_size=5.0)\n",
+    "env_correct = Environment.from_samples(positions=position_2d, bin_size=5.0)\n",
     "print(\"Always use factory methods like from_samples()!\")"
    ]
   },
