--- a/examples/03_morphological_operations.ipynb
+++ b/examples/03_morphological_operations.ipynb
@@ -52,6 +52,12 @@
    "execution_count": 1,
    "id": "c4",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:47.018513Z",
+     "iopub.status.busy": "2025-12-05T21:08:47.018162Z",
+     "iopub.status.idle": "2025-12-05T21:08:49.127516Z",
+     "shell.execute_reply": "2025-12-05T21:08:49.126903Z"
+    },
     "lines_to_next_cell": 2
    },
    "outputs": [],
@@ -82,7 +88,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "c6",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:49.133011Z",
+     "iopub.status.busy": "2025-12-05T21:08:49.132578Z",
+     "iopub.status.idle": "2025-12-05T21:08:49.159033Z",
+     "shell.execute_reply": "2025-12-05T21:08:49.157111Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -162,7 +175,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "c7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:49.163872Z",
+     "iopub.status.busy": "2025-12-05T21:08:49.163346Z",
+     "iopub.status.idle": "2025-12-05T21:08:49.325759Z",
+     "shell.execute_reply": "2025-12-05T21:08:49.324498Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -225,7 +245,14 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "c9",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:49.330698Z",
+     "iopub.status.busy": "2025-12-05T21:08:49.330123Z",
+     "iopub.status.idle": "2025-12-05T21:08:49.360216Z",
+     "shell.execute_reply": "2025-12-05T21:08:49.358395Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -255,7 +282,7 @@
    "source": [
     "# Create environment with default settings\n",
     "env_default = Environment.from_samples(\n",
-    "    data_samples=sparse_data, bin_size=5.0, name=\"Default_Sparse\"\n",
+    "    positions=sparse_data, bin_size=5.0, name=\"Default_Sparse\"\n",
     ")\n",
     "\n",
     "print(env_default.info())"
@@ -265,7 +292,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "c10",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:49.364561Z",
+     "iopub.status.busy": "2025-12-05T21:08:49.364404Z",
+     "iopub.status.idle": "2025-12-05T21:08:49.901626Z",
+     "shell.execute_reply": "2025-12-05T21:08:49.899051Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -318,7 +352,14 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "c12",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:49.907383Z",
+     "iopub.status.busy": "2025-12-05T21:08:49.907171Z",
+     "iopub.status.idle": "2025-12-05T21:08:49.915142Z",
+     "shell.execute_reply": "2025-12-05T21:08:49.913827Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -368,7 +409,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "c14",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:49.922498Z",
+     "iopub.status.busy": "2025-12-05T21:08:49.922283Z",
+     "iopub.status.idle": "2025-12-05T21:08:49.957905Z",
+     "shell.execute_reply": "2025-12-05T21:08:49.952297Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -400,7 +448,7 @@
    "source": [
     "# Create environment with dilation\n",
     "env_dilated = Environment.from_samples(\n",
-    "    data_samples=sparse_data,\n",
+    "    positions=sparse_data,\n",
     "    bin_size=5.0,\n",
     "    dilate=True,  # Enable dilation\n",
     "    name=\"Dilated\",\n",
@@ -414,7 +462,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "c15",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:49.966076Z",
+     "iopub.status.busy": "2025-12-05T21:08:49.965840Z",
+     "iopub.status.idle": "2025-12-05T21:08:50.999869Z",
+     "shell.execute_reply": "2025-12-05T21:08:50.996519Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -469,7 +524,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "c17",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:51.007017Z",
+     "iopub.status.busy": "2025-12-05T21:08:51.006484Z",
+     "iopub.status.idle": "2025-12-05T21:08:51.034188Z",
+     "shell.execute_reply": "2025-12-05T21:08:51.029788Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -501,7 +563,7 @@
    "source": [
     "# Create environment with hole filling\n",
     "env_filled = Environment.from_samples(\n",
-    "    data_samples=sparse_data,\n",
+    "    positions=sparse_data,\n",
     "    bin_size=5.0,\n",
     "    fill_holes=True,  # Enable hole filling\n",
     "    name=\"Filled\",\n",
@@ -527,7 +589,14 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "c19",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:51.050535Z",
+     "iopub.status.busy": "2025-12-05T21:08:51.049584Z",
+     "iopub.status.idle": "2025-12-05T21:08:51.146656Z",
+     "shell.execute_reply": "2025-12-05T21:08:51.114207Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -559,7 +628,7 @@
    "source": [
     "# Create environment with gap closing\n",
     "env_closed = Environment.from_samples(\n",
-    "    data_samples=sparse_data,\n",
+    "    positions=sparse_data,\n",
     "    bin_size=5.0,\n",
     "    close_gaps=True,  # Enable closing\n",
     "    name=\"Closed\",\n",
@@ -585,7 +654,14 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "c21",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:51.171381Z",
+     "iopub.status.busy": "2025-12-05T21:08:51.171117Z",
+     "iopub.status.idle": "2025-12-05T21:08:51.208826Z",
+     "shell.execute_reply": "2025-12-05T21:08:51.201208Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -615,7 +691,7 @@
    "source": [
     "# Combine all operations\n",
     "env_combined = Environment.from_samples(\n",
-    "    data_samples=sparse_data,\n",
+    "    positions=sparse_data,\n",
     "    bin_size=5.0,\n",
     "    dilate=True,\n",
     "    fill_holes=True,\n",
@@ -630,7 +706,14 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "c22",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:51.221802Z",
+     "iopub.status.busy": "2025-12-05T21:08:51.221154Z",
+     "iopub.status.idle": "2025-12-05T21:08:53.832228Z",
+     "shell.execute_reply": "2025-12-05T21:08:53.813397Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -688,7 +771,14 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "c24",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:53.834315Z",
+     "iopub.status.busy": "2025-12-05T21:08:53.834192Z",
+     "iopub.status.idle": "2025-12-05T21:08:53.876066Z",
+     "shell.execute_reply": "2025-12-05T21:08:53.875788Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -707,7 +797,7 @@
     "\n",
     "for thresh in thresholds:\n",
     "    env = Environment.from_samples(\n",
-    "        data_samples=sparse_data,\n",
+    "        positions=sparse_data,\n",
     "        bin_size=5.0,\n",
     "        bin_count_threshold=thresh,\n",
     "        name=f\"Threshold_{thresh}\",\n",
@@ -721,6 +811,12 @@
    "execution_count": 14,
    "id": "c25",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:53.878186Z",
+     "iopub.status.busy": "2025-12-05T21:08:53.878069Z",
+     "iopub.status.idle": "2025-12-05T21:08:54.322461Z",
+     "shell.execute_reply": "2025-12-05T21:08:54.321894Z"
+    },
     "lines_to_next_cell": 2
    },
    "outputs": [
@@ -776,7 +872,14 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "c27",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:54.325078Z",
+     "iopub.status.busy": "2025-12-05T21:08:54.324965Z",
+     "iopub.status.idle": "2025-12-05T21:08:54.328509Z",
+     "shell.execute_reply": "2025-12-05T21:08:54.328169Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -840,7 +943,14 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "c29",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:54.330380Z",
+     "iopub.status.busy": "2025-12-05T21:08:54.330258Z",
+     "iopub.status.idle": "2025-12-05T21:08:54.334699Z",
+     "shell.execute_reply": "2025-12-05T21:08:54.334397Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -889,7 +999,14 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "c30",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:54.336192Z",
+     "iopub.status.busy": "2025-12-05T21:08:54.336093Z",
+     "iopub.status.idle": "2025-12-05T21:08:54.424279Z",
+     "shell.execute_reply": "2025-12-05T21:08:54.423965Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -954,7 +1071,14 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "c32",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:54.426061Z",
+     "iopub.status.busy": "2025-12-05T21:08:54.425947Z",
+     "iopub.status.idle": "2025-12-05T21:08:54.450183Z",
+     "shell.execute_reply": "2025-12-05T21:08:54.448868Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -970,7 +1094,7 @@
    "source": [
     "# Create fixed environment\n",
     "env_fixed = Environment.from_samples(\n",
-    "    data_samples=sparse_data, bin_size=5.0, dilate=True, fill_holes=True, name=\"Fixed\"\n",
+    "    positions=sparse_data, bin_size=5.0, dilate=True, fill_holes=True, name=\"Fixed\"\n",
     ")\n",
     "\n",
     "print(f\"Fixed environment: {env_fixed.n_bins} bins\")\n",
@@ -1006,7 +1130,14 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "c33",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:54.452241Z",
+     "iopub.status.busy": "2025-12-05T21:08:54.452146Z",
+     "iopub.status.idle": "2025-12-05T21:08:54.622947Z",
+     "shell.execute_reply": "2025-12-05T21:08:54.622393Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1135,6 +1266,12 @@
    "execution_count": 20,
    "id": "c36",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:54.625532Z",
+     "iopub.status.busy": "2025-12-05T21:08:54.625389Z",
+     "iopub.status.idle": "2025-12-05T21:08:54.723098Z",
+     "shell.execute_reply": "2025-12-05T21:08:54.722377Z"
+    },
     "lines_to_next_cell": 2
    },
    "outputs": [
@@ -1142,7 +1279,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Don't dilate multiple times unless you have a good reason!\n",
+      "Warning: Don't dilate multiple times unless you have a good reason!"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "Morphological operations should be used conservatively.\n"
      ]
     }
@@ -1150,7 +1294,7 @@
    "source": [
     "# Multiple rounds of dilation\n",
     "env_over_dilated = Environment.from_samples(\n",
-    "    data_samples=sparse_data, bin_size=5.0, dilate=True, name=\"OverDilated\"\n",
+    "    positions=sparse_data, bin_size=5.0, dilate=True, name=\"OverDilated\"\n",
     ")\n",
     "\n",
     "# Apply dilation multiple times manually (not recommended!)\n",
@@ -1191,7 +1335,14 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "c39",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:08:54.731357Z",
+     "iopub.status.busy": "2025-12-05T21:08:54.730841Z",
+     "iopub.status.idle": "2025-12-05T21:08:54.736184Z",
+     "shell.execute_reply": "2025-12-05T21:08:54.734664Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
