--- a/examples/04_regions_of_interest.ipynb
+++ b/examples/04_regions_of_interest.ipynb
@@ -57,7 +57,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "388a84d1",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:19.515141Z",
+     "iopub.status.busy": "2025-12-05T21:07:19.515037Z",
+     "iopub.status.idle": "2025-12-05T21:07:20.900158Z",
+     "shell.execute_reply": "2025-12-05T21:07:20.899843Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -91,7 +98,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "3de784c8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:20.902093Z",
+     "iopub.status.busy": "2025-12-05T21:07:20.901861Z",
+     "iopub.status.idle": "2025-12-05T21:07:20.918175Z",
+     "shell.execute_reply": "2025-12-05T21:07:20.917845Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -152,7 +166,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "f2664c57",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:20.919604Z",
+     "iopub.status.busy": "2025-12-05T21:07:20.919513Z",
+     "iopub.status.idle": "2025-12-05T21:07:20.939269Z",
+     "shell.execute_reply": "2025-12-05T21:07:20.938918Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -190,7 +211,14 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "4ebc28fa",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:20.940888Z",
+     "iopub.status.busy": "2025-12-05T21:07:20.940783Z",
+     "iopub.status.idle": "2025-12-05T21:07:21.083582Z",
+     "shell.execute_reply": "2025-12-05T21:07:21.083156Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -279,7 +307,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "4d54cd15",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:21.085271Z",
+     "iopub.status.busy": "2025-12-05T21:07:21.085169Z",
+     "iopub.status.idle": "2025-12-05T21:07:21.093766Z",
+     "shell.execute_reply": "2025-12-05T21:07:21.091856Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -319,7 +354,14 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "d631eef5",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:21.095407Z",
+     "iopub.status.busy": "2025-12-05T21:07:21.095301Z",
+     "iopub.status.idle": "2025-12-05T21:07:21.097956Z",
+     "shell.execute_reply": "2025-12-05T21:07:21.097624Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -359,7 +401,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "828e699e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:21.099823Z",
+     "iopub.status.busy": "2025-12-05T21:07:21.099703Z",
+     "iopub.status.idle": "2025-12-05T21:07:21.321420Z",
+     "shell.execute_reply": "2025-12-05T21:07:21.321032Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -427,7 +476,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "45601b37",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:21.323025Z",
+     "iopub.status.busy": "2025-12-05T21:07:21.322926Z",
+     "iopub.status.idle": "2025-12-05T21:07:21.327299Z",
+     "shell.execute_reply": "2025-12-05T21:07:21.326988Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -467,7 +523,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "363e8de9",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:21.328869Z",
+     "iopub.status.busy": "2025-12-05T21:07:21.328755Z",
+     "iopub.status.idle": "2025-12-05T21:07:21.454579Z",
+     "shell.execute_reply": "2025-12-05T21:07:21.454266Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -552,7 +615,14 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "c7e3647e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:21.455960Z",
+     "iopub.status.busy": "2025-12-05T21:07:21.455853Z",
+     "iopub.status.idle": "2025-12-05T21:07:21.461206Z",
+     "shell.execute_reply": "2025-12-05T21:07:21.460937Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -593,7 +663,14 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "b8395c46",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:21.462742Z",
+     "iopub.status.busy": "2025-12-05T21:07:21.462595Z",
+     "iopub.status.idle": "2025-12-05T21:07:21.515920Z",
+     "shell.execute_reply": "2025-12-05T21:07:21.515416Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -652,7 +729,14 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "f7054fce",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:21.517483Z",
+     "iopub.status.busy": "2025-12-05T21:07:21.517319Z",
+     "iopub.status.idle": "2025-12-05T21:07:21.570604Z",
+     "shell.execute_reply": "2025-12-05T21:07:21.570282Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -715,7 +799,14 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "441fc539",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:21.572105Z",
+     "iopub.status.busy": "2025-12-05T21:07:21.571993Z",
+     "iopub.status.idle": "2025-12-05T21:07:21.575971Z",
+     "shell.execute_reply": "2025-12-05T21:07:21.575589Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -745,7 +836,14 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "d9d2f42e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:21.577195Z",
+     "iopub.status.busy": "2025-12-05T21:07:21.577104Z",
+     "iopub.status.idle": "2025-12-05T21:07:21.660654Z",
+     "shell.execute_reply": "2025-12-05T21:07:21.660164Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -817,7 +915,14 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "19b466f8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:21.662446Z",
+     "iopub.status.busy": "2025-12-05T21:07:21.662329Z",
+     "iopub.status.idle": "2025-12-05T21:07:21.664919Z",
+     "shell.execute_reply": "2025-12-05T21:07:21.664449Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -849,7 +954,14 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "a3fc95c7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:21.666793Z",
+     "iopub.status.busy": "2025-12-05T21:07:21.666663Z",
+     "iopub.status.idle": "2025-12-05T21:07:21.668822Z",
+     "shell.execute_reply": "2025-12-05T21:07:21.668574Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -886,7 +998,14 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "b0784600",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:21.670202Z",
+     "iopub.status.busy": "2025-12-05T21:07:21.670047Z",
+     "iopub.status.idle": "2025-12-05T21:07:21.672339Z",
+     "shell.execute_reply": "2025-12-05T21:07:21.672044Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -914,13 +1033,20 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "3e8ebfa7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:21.673800Z",
+     "iopub.status.busy": "2025-12-05T21:07:21.673701Z",
+     "iopub.status.idle": "2025-12-05T21:07:21.677529Z",
+     "shell.execute_reply": "2025-12-05T21:07:21.677222Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Regions saved to: /var/folders/86/m147b4k17lddvs_xsw0mj2zw0000gn/T/tmpnegz5wem.json\n",
+      "Regions saved to: /var/folders/86/m147b4k17lddvs_xsw0mj2zw0000gn/T/tmpy16hy6l0.json\n",
       "Loaded 10 regions\n"
      ]
     }
@@ -955,7 +1081,14 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "9309599c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:21.678882Z",
+     "iopub.status.busy": "2025-12-05T21:07:21.678801Z",
+     "iopub.status.idle": "2025-12-05T21:07:21.680705Z",
+     "shell.execute_reply": "2025-12-05T21:07:21.680373Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -986,7 +1119,14 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "05d55cb7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:07:21.682755Z",
+     "iopub.status.busy": "2025-12-05T21:07:21.682650Z",
+     "iopub.status.idle": "2025-12-05T21:07:21.684940Z",
+     "shell.execute_reply": "2025-12-05T21:07:21.684542Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
