--- a/examples/05_track_linearization.ipynb
+++ b/examples/05_track_linearization.ipynb
@@ -56,9 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "e4",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:42.261065Z",
+     "iopub.status.busy": "2025-12-05T21:09:42.260902Z",
+     "iopub.status.idle": "2025-12-05T21:09:44.480845Z",
+     "shell.execute_reply": "2025-12-05T21:09:44.479723Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -84,9 +91,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "e6",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:44.485160Z",
+     "iopub.status.busy": "2025-12-05T21:09:44.484517Z",
+     "iopub.status.idle": "2025-12-05T21:09:44.490392Z",
+     "shell.execute_reply": "2025-12-05T21:09:44.489666Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -124,9 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "e7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:44.493001Z",
+     "iopub.status.busy": "2025-12-05T21:09:44.492836Z",
+     "iopub.status.idle": "2025-12-05T21:09:44.632801Z",
+     "shell.execute_reply": "2025-12-05T21:09:44.626585Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -175,9 +196,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "e9",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:44.641996Z",
+     "iopub.status.busy": "2025-12-05T21:09:44.641607Z",
+     "iopub.status.idle": "2025-12-05T21:09:44.650556Z",
+     "shell.execute_reply": "2025-12-05T21:09:44.649274Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -238,9 +266,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "e11",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:44.655516Z",
+     "iopub.status.busy": "2025-12-05T21:09:44.655244Z",
+     "iopub.status.idle": "2025-12-05T21:09:44.729015Z",
+     "shell.execute_reply": "2025-12-05T21:09:44.727805Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -296,9 +331,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "e13",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:44.735756Z",
+     "iopub.status.busy": "2025-12-05T21:09:44.735534Z",
+     "iopub.status.idle": "2025-12-05T21:09:44.745558Z",
+     "shell.execute_reply": "2025-12-05T21:09:44.743310Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -341,9 +383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "e14",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:44.752156Z",
+     "iopub.status.busy": "2025-12-05T21:09:44.751713Z",
+     "iopub.status.idle": "2025-12-05T21:09:44.933511Z",
+     "shell.execute_reply": "2025-12-05T21:09:44.929429Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -406,9 +455,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "e16",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:44.938337Z",
+     "iopub.status.busy": "2025-12-05T21:09:44.938085Z",
+     "iopub.status.idle": "2025-12-05T21:09:44.949242Z",
+     "shell.execute_reply": "2025-12-05T21:09:44.945915Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -473,9 +529,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "e17",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:44.957933Z",
+     "iopub.status.busy": "2025-12-05T21:09:44.957692Z",
+     "iopub.status.idle": "2025-12-05T21:09:45.230365Z",
+     "shell.execute_reply": "2025-12-05T21:09:45.228496Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -559,9 +622,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "e19",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:45.249135Z",
+     "iopub.status.busy": "2025-12-05T21:09:45.248428Z",
+     "iopub.status.idle": "2025-12-05T21:09:45.274122Z",
+     "shell.execute_reply": "2025-12-05T21:09:45.263470Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -605,9 +675,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "e20",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:45.301880Z",
+     "iopub.status.busy": "2025-12-05T21:09:45.301593Z",
+     "iopub.status.idle": "2025-12-05T21:09:45.331513Z",
+     "shell.execute_reply": "2025-12-05T21:09:45.322058Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -661,9 +738,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "e21",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:45.352837Z",
+     "iopub.status.busy": "2025-12-05T21:09:45.351527Z",
+     "iopub.status.idle": "2025-12-05T21:09:45.489486Z",
+     "shell.execute_reply": "2025-12-05T21:09:45.486668Z"
+    },
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "data": {
@@ -703,7 +788,9 @@
   {
    "cell_type": "markdown",
    "id": "e22",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "## Why Linearization Matters: Neural Analysis Example\n",
     "\n",
@@ -712,9 +799,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "e23",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:45.496583Z",
+     "iopub.status.busy": "2025-12-05T21:09:45.496380Z",
+     "iopub.status.idle": "2025-12-05T21:09:45.514151Z",
+     "shell.execute_reply": "2025-12-05T21:09:45.512569Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -789,9 +883,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "e24",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:45.519389Z",
+     "iopub.status.busy": "2025-12-05T21:09:45.518963Z",
+     "iopub.status.idle": "2025-12-05T21:09:45.635643Z",
+     "shell.execute_reply": "2025-12-05T21:09:45.633990Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -875,9 +976,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "e26",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:45.641623Z",
+     "iopub.status.busy": "2025-12-05T21:09:45.641390Z",
+     "iopub.status.idle": "2025-12-05T21:09:45.654898Z",
+     "shell.execute_reply": "2025-12-05T21:09:45.652823Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -891,7 +999,7 @@
    "source": [
     "# Create 2D environment (wrong for this analysis!)\n",
     "env_2d = Environment.from_samples(\n",
-    "    data_samples=plus_maze_data, bin_size=8.0, name=\"PlusMaze2D\"\n",
+    "    positions=plus_maze_data, bin_size=8.0, name=\"PlusMaze2D\"\n",
     ")\n",
     "\n",
     "# Map to bins\n",
@@ -921,9 +1029,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "e27",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:45.662330Z",
+     "iopub.status.busy": "2025-12-05T21:09:45.661896Z",
+     "iopub.status.idle": "2025-12-05T21:09:45.769788Z",
+     "shell.execute_reply": "2025-12-05T21:09:45.769365Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -997,9 +1112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "e29",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:45.772314Z",
+     "iopub.status.busy": "2025-12-05T21:09:45.772172Z",
+     "iopub.status.idle": "2025-12-05T21:09:45.779377Z",
+     "shell.execute_reply": "2025-12-05T21:09:45.777743Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1045,9 +1167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "e30",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:45.782715Z",
+     "iopub.status.busy": "2025-12-05T21:09:45.782551Z",
+     "iopub.status.idle": "2025-12-05T21:09:45.895545Z",
+     "shell.execute_reply": "2025-12-05T21:09:45.890058Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1135,9 +1264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "e33",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:45.906927Z",
+     "iopub.status.busy": "2025-12-05T21:09:45.906348Z",
+     "iopub.status.idle": "2025-12-05T21:09:45.921168Z",
+     "shell.execute_reply": "2025-12-05T21:09:45.917649Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1203,15 +1339,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "id": "e35",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:45.928270Z",
+     "iopub.status.busy": "2025-12-05T21:09:45.927908Z",
+     "iopub.status.idle": "2025-12-05T21:09:45.932536Z",
+     "shell.execute_reply": "2025-12-05T21:09:45.931599Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: Linearization is only available for 1D environments (GraphLayout). This environment has is_1d=False. Use Environment.from_graph() to create a 1D environment.\n",
+      "Error: to_linear() is only available for 1D environments (GraphLayout). This environment is 2D. Use bin_at() to map positions to bins for N-D environments.\n",
       "\n",
       "Always check env.is_1d before calling to_linear()!\n",
       "Using spatial binning instead\n"
