--- a/examples/06_composite_environments.ipynb
+++ b/examples/06_composite_environments.ipynb
@@ -57,7 +57,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "93d10cef",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:49.988797Z",
+     "iopub.status.busy": "2025-12-05T21:09:49.988690Z",
+     "iopub.status.idle": "2025-12-05T21:09:51.360086Z",
+     "shell.execute_reply": "2025-12-05T21:09:51.359754Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -95,7 +102,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "556c87e0",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:51.361998Z",
+     "iopub.status.busy": "2025-12-05T21:09:51.361764Z",
+     "iopub.status.idle": "2025-12-05T21:09:51.379314Z",
+     "shell.execute_reply": "2025-12-05T21:09:51.379009Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -113,17 +127,13 @@
     "room1_data = np.random.randn(n_samples_room1, 2) * 8 + np.array([25, 25])\n",
     "room1_data = np.clip(room1_data, 5, 45)\n",
     "\n",
-    "env_room1 = Environment.from_samples(\n",
-    "    data_samples=room1_data, bin_size=4.0, name=\"Room1\"\n",
-    ")\n",
+    "env_room1 = Environment.from_samples(positions=room1_data, bin_size=4.0, name=\"Room1\")\n",
     "\n",
     "# Room 2: Different location, 40x60 cm rectangular arena\n",
     "n_samples_room2 = 1500\n",
     "room2_data = np.random.uniform(low=[60, 10], high=[95, 65], size=(n_samples_room2, 2))\n",
     "\n",
-    "env_room2 = Environment.from_samples(\n",
-    "    data_samples=room2_data, bin_size=4.0, name=\"Room2\"\n",
-    ")\n",
+    "env_room2 = Environment.from_samples(positions=room2_data, bin_size=4.0, name=\"Room2\")\n",
     "\n",
     "print(f\"Room 1: {env_room1.n_bins} bins, range {env_room1.dimension_ranges}\")\n",
     "print(f\"Room 2: {env_room2.n_bins} bins, range {env_room2.dimension_ranges}\")"
@@ -133,7 +143,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "688f80cb",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:51.380826Z",
+     "iopub.status.busy": "2025-12-05T21:09:51.380700Z",
+     "iopub.status.idle": "2025-12-05T21:09:51.718840Z",
+     "shell.execute_reply": "2025-12-05T21:09:51.718512Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -174,7 +191,14 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "910602c2",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:51.720353Z",
+     "iopub.status.busy": "2025-12-05T21:09:51.720243Z",
+     "iopub.status.idle": "2025-12-05T21:09:51.724844Z",
+     "shell.execute_reply": "2025-12-05T21:09:51.724425Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -229,7 +253,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "cd26ddea",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:51.726679Z",
+     "iopub.status.busy": "2025-12-05T21:09:51.726524Z",
+     "iopub.status.idle": "2025-12-05T21:09:51.729693Z",
+     "shell.execute_reply": "2025-12-05T21:09:51.729385Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -265,7 +296,14 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "0a080471",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:51.731069Z",
+     "iopub.status.busy": "2025-12-05T21:09:51.730977Z",
+     "iopub.status.idle": "2025-12-05T21:09:52.152275Z",
+     "shell.execute_reply": "2025-12-05T21:09:52.151928Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -347,7 +385,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "6e763173",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:52.153860Z",
+     "iopub.status.busy": "2025-12-05T21:09:52.153645Z",
+     "iopub.status.idle": "2025-12-05T21:09:52.157040Z",
+     "shell.execute_reply": "2025-12-05T21:09:52.156687Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -388,6 +433,12 @@
    "execution_count": 8,
    "id": "8318f6d1",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:52.158602Z",
+     "iopub.status.busy": "2025-12-05T21:09:52.158507Z",
+     "iopub.status.idle": "2025-12-05T21:09:52.162047Z",
+     "shell.execute_reply": "2025-12-05T21:09:52.161749Z"
+    },
     "lines_to_next_cell": 2
    },
    "outputs": [
@@ -440,7 +491,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "7bc9f35a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:52.163534Z",
+     "iopub.status.busy": "2025-12-05T21:09:52.163437Z",
+     "iopub.status.idle": "2025-12-05T21:09:52.180076Z",
+     "shell.execute_reply": "2025-12-05T21:09:52.179709Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -486,7 +544,14 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "337cbdd3",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:52.181640Z",
+     "iopub.status.busy": "2025-12-05T21:09:52.181532Z",
+     "iopub.status.idle": "2025-12-05T21:09:52.189892Z",
+     "shell.execute_reply": "2025-12-05T21:09:52.189592Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -527,7 +592,14 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "42d880b6",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:52.191512Z",
+     "iopub.status.busy": "2025-12-05T21:09:52.191400Z",
+     "iopub.status.idle": "2025-12-05T21:09:53.060719Z",
+     "shell.execute_reply": "2025-12-05T21:09:53.060428Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -619,7 +691,14 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "6f7a2e7b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:53.062343Z",
+     "iopub.status.busy": "2025-12-05T21:09:53.062240Z",
+     "iopub.status.idle": "2025-12-05T21:09:53.076938Z",
+     "shell.execute_reply": "2025-12-05T21:09:53.076674Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -638,25 +717,25 @@
     "# Start box (bottom)\n",
     "start_box_data = np.random.uniform(low=[45, 0], high=[55, 30], size=(600, 2))\n",
     "env_start = Environment.from_samples(\n",
-    "    data_samples=start_box_data, bin_size=3.0, name=\"StartBox\"\n",
+    "    positions=start_box_data, bin_size=3.0, name=\"StartBox\"\n",
     ")\n",
     "\n",
     "# Left arm\n",
     "left_arm_data = np.random.uniform(low=[10, 30], high=[45, 40], size=(500, 2))\n",
     "env_left = Environment.from_samples(\n",
-    "    data_samples=left_arm_data, bin_size=3.0, name=\"LeftArm\"\n",
+    "    positions=left_arm_data, bin_size=3.0, name=\"LeftArm\"\n",
     ")\n",
     "\n",
     "# Right arm\n",
     "right_arm_data = np.random.uniform(low=[55, 30], high=[90, 40], size=(500, 2))\n",
     "env_right = Environment.from_samples(\n",
-    "    data_samples=right_arm_data, bin_size=3.0, name=\"RightArm\"\n",
+    "    positions=right_arm_data, bin_size=3.0, name=\"RightArm\"\n",
     ")\n",
     "\n",
     "# Center junction\n",
     "junction_data = np.random.uniform(low=[40, 28], high=[60, 35], size=(400, 2))\n",
     "env_junction = Environment.from_samples(\n",
-    "    data_samples=junction_data, bin_size=3.0, name=\"Junction\"\n",
+    "    positions=junction_data, bin_size=3.0, name=\"Junction\"\n",
     ")\n",
     "\n",
     "print(\"T-Maze Compartments:\")\n",
@@ -668,7 +747,14 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "c15ef45f",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:53.078381Z",
+     "iopub.status.busy": "2025-12-05T21:09:53.078282Z",
+     "iopub.status.idle": "2025-12-05T21:09:53.082380Z",
+     "shell.execute_reply": "2025-12-05T21:09:53.082155Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -702,7 +788,14 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "17f8ea34",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:53.083668Z",
+     "iopub.status.busy": "2025-12-05T21:09:53.083585Z",
+     "iopub.status.idle": "2025-12-05T21:09:53.313781Z",
+     "shell.execute_reply": "2025-12-05T21:09:53.313492Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -809,7 +902,14 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "cf5710dd",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:53.315257Z",
+     "iopub.status.busy": "2025-12-05T21:09:53.315121Z",
+     "iopub.status.idle": "2025-12-05T21:09:53.319507Z",
+     "shell.execute_reply": "2025-12-05T21:09:53.319241Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -850,7 +950,14 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "3fc82146",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:53.320765Z",
+     "iopub.status.busy": "2025-12-05T21:09:53.320681Z",
+     "iopub.status.idle": "2025-12-05T21:09:53.410839Z",
+     "shell.execute_reply": "2025-12-05T21:09:53.410481Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -951,7 +1058,14 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "62d84c32",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:53.412438Z",
+     "iopub.status.busy": "2025-12-05T21:09:53.412307Z",
+     "iopub.status.idle": "2025-12-05T21:09:53.414954Z",
+     "shell.execute_reply": "2025-12-05T21:09:53.414696Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -992,7 +1106,14 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "477eb203",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:53.416211Z",
+     "iopub.status.busy": "2025-12-05T21:09:53.416116Z",
+     "iopub.status.idle": "2025-12-05T21:09:53.420364Z",
+     "shell.execute_reply": "2025-12-05T21:09:53.420055Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1036,7 +1157,14 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "3f8a5751",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:53.421755Z",
+     "iopub.status.busy": "2025-12-05T21:09:53.421655Z",
+     "iopub.status.idle": "2025-12-05T21:09:53.423468Z",
+     "shell.execute_reply": "2025-12-05T21:09:53.423252Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1069,7 +1197,14 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "81e17de8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:53.424652Z",
+     "iopub.status.busy": "2025-12-05T21:09:53.424569Z",
+     "iopub.status.idle": "2025-12-05T21:09:53.428517Z",
+     "shell.execute_reply": "2025-12-05T21:09:53.428260Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1109,7 +1244,14 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "0a929afa",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:53.429850Z",
+     "iopub.status.busy": "2025-12-05T21:09:53.429752Z",
+     "iopub.status.idle": "2025-12-05T21:09:53.432544Z",
+     "shell.execute_reply": "2025-12-05T21:09:53.432238Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1164,7 +1306,14 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "399219b7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:53.433922Z",
+     "iopub.status.busy": "2025-12-05T21:09:53.433838Z",
+     "iopub.status.idle": "2025-12-05T21:09:53.435952Z",
+     "shell.execute_reply": "2025-12-05T21:09:53.435686Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1237,7 +1386,14 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "6bba70bd",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:53.437382Z",
+     "iopub.status.busy": "2025-12-05T21:09:53.437292Z",
+     "iopub.status.idle": "2025-12-05T21:09:53.441911Z",
+     "shell.execute_reply": "2025-12-05T21:09:53.441635Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1294,7 +1450,14 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "4f6e998b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:53.443546Z",
+     "iopub.status.busy": "2025-12-05T21:09:53.443453Z",
+     "iopub.status.idle": "2025-12-05T21:09:53.447414Z",
+     "shell.execute_reply": "2025-12-05T21:09:53.447106Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1369,7 +1532,14 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "33d21409",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:53.448825Z",
+     "iopub.status.busy": "2025-12-05T21:09:53.448724Z",
+     "iopub.status.idle": "2025-12-05T21:09:53.452106Z",
+     "shell.execute_reply": "2025-12-05T21:09:53.451837Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1413,13 +1583,20 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "bf632dcc",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:53.453410Z",
+     "iopub.status.busy": "2025-12-05T21:09:53.453328Z",
+     "iopub.status.idle": "2025-12-05T21:09:53.460163Z",
+     "shell.execute_reply": "2025-12-05T21:09:53.459904Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved composite to: /var/folders/86/m147b4k17lddvs_xsw0mj2zw0000gn/T/tmpubfcaj61/my_composite_env.pkl\n",
+      "Saved composite to: /var/folders/86/m147b4k17lddvs_xsw0mj2zw0000gn/T/tmpadoc399i/my_composite_env.pkl\n",
       "File size: 110.04 KB\n",
       "\n",
       "Verifying loaded composite:\n",
