--- a/examples/07_advanced_operations.ipynb
+++ b/examples/07_advanced_operations.ipynb
@@ -51,7 +51,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "fcc8ad73",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:56.579123Z",
+     "iopub.status.busy": "2025-12-05T21:09:56.579029Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.009920Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.009305Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -91,7 +98,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "f793cde8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.012461Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.012212Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.026429Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.026112Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -112,7 +126,7 @@
     "\n",
     "u_maze_data = np.vstack([left_arm, bottom, right_arm])\n",
     "\n",
-    "env_u = Environment.from_samples(data_samples=u_maze_data, bin_size=4.0, name=\"U_Maze\")\n",
+    "env_u = Environment.from_samples(positions=u_maze_data, bin_size=4.0, name=\"U_Maze\")\n",
     "\n",
     "print(f\"U-Maze Environment: {env_u.n_bins} bins\")"
    ]
@@ -121,7 +135,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "9aa92def",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.028125Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.028009Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.308714Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.308418Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -156,7 +177,14 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "918876a7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.311022Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.310734Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.314288Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.314028Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -201,7 +229,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "6f6474f8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.315573Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.315479Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.318713Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.318291Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -231,7 +266,14 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "b3189441",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.320487Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.320362Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.540802Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.540498Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -335,7 +377,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "e5dddcec",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.542585Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.542422Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.547835Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.547573Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -408,7 +457,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "d300e024",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.549363Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.549273Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.556641Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.556348Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -423,7 +479,7 @@
     "# Create a simple square environment\n",
     "square_data = np.random.uniform(0, 40, size=(1000, 2))\n",
     "env_original = Environment.from_samples(\n",
-    "    data_samples=square_data, bin_size=5.0, name=\"Original\"\n",
+    "    positions=square_data, bin_size=5.0, name=\"Original\"\n",
     ")\n",
     "\n",
     "print(f\"Original environment: {env_original.n_bins} bins\")\n",
@@ -434,7 +490,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "7683c045",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.558552Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.558374Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.561621Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.561176Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -463,7 +526,14 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "057f20bb",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.563047Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.562950Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.565501Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.565155Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -500,7 +570,14 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "9b676974",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.566924Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.566815Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.570429Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.569155Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -537,7 +614,14 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "ae0214dd",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.573165Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.572984Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.576018Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.575604Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -577,7 +661,14 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "adbe8d49",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.579145Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.578991Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.801195Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.800885Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -628,7 +719,14 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "0eba5457",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.803021Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.802838Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.806408Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.805963Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -698,7 +796,14 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "bd068e1e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.808170Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.808061Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.826479Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.826054Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -727,7 +832,14 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "ad0258b1",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.828248Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.828134Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.830711Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.830441Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -763,7 +875,14 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "e289d91e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.832056Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.831944Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.917966Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.917690Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -815,7 +934,14 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "4ae64911",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.919719Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.919594Z",
+     "iopub.status.idle": "2025-12-05T21:09:58.922153Z",
+     "shell.execute_reply": "2025-12-05T21:09:58.921886Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -848,7 +974,14 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "4ab57c34",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:58.923730Z",
+     "iopub.status.busy": "2025-12-05T21:09:58.923562Z",
+     "iopub.status.idle": "2025-12-05T21:09:59.066281Z",
+     "shell.execute_reply": "2025-12-05T21:09:59.065862Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -921,7 +1054,14 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "795254f8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:59.067884Z",
+     "iopub.status.busy": "2025-12-05T21:09:59.067785Z",
+     "iopub.status.idle": "2025-12-05T21:09:59.084222Z",
+     "shell.execute_reply": "2025-12-05T21:09:59.083926Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -953,7 +1093,7 @@
     "# Create environment from rotated bin centers\n",
     "# (In practice, you'd have new data from Session 2)\n",
     "env_rotated = Environment.from_samples(\n",
-    "    data_samples=rotated_centers, bin_size=3.0, name=\"Session2_Rotated\"\n",
+    "    positions=rotated_centers, bin_size=3.0, name=\"Session2_Rotated\"\n",
     ")\n",
     "\n",
     "print(f\"\\nRotated environment: {env_rotated.n_bins} bins\")"
@@ -963,7 +1103,14 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "2c1efae0",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:59.085703Z",
+     "iopub.status.busy": "2025-12-05T21:09:59.085577Z",
+     "iopub.status.idle": "2025-12-05T21:09:59.088092Z",
+     "shell.execute_reply": "2025-12-05T21:09:59.087725Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1005,7 +1152,14 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "d1ab31d3",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:59.089830Z",
+     "iopub.status.busy": "2025-12-05T21:09:59.089708Z",
+     "iopub.status.idle": "2025-12-05T21:09:59.100750Z",
+     "shell.execute_reply": "2025-12-05T21:09:59.100452Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1046,7 +1200,14 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "35a8aad7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:59.102407Z",
+     "iopub.status.busy": "2025-12-05T21:09:59.102289Z",
+     "iopub.status.idle": "2025-12-05T21:09:59.104992Z",
+     "shell.execute_reply": "2025-12-05T21:09:59.104720Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1076,7 +1237,14 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "4c9ca004",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:59.106334Z",
+     "iopub.status.busy": "2025-12-05T21:09:59.106221Z",
+     "iopub.status.idle": "2025-12-05T21:09:59.108805Z",
+     "shell.execute_reply": "2025-12-05T21:09:59.108517Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1111,7 +1279,14 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "62632f21",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:59.110385Z",
+     "iopub.status.busy": "2025-12-05T21:09:59.110277Z",
+     "iopub.status.idle": "2025-12-05T21:09:59.202468Z",
+     "shell.execute_reply": "2025-12-05T21:09:59.201904Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1162,7 +1337,14 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "edafc847",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:59.204286Z",
+     "iopub.status.busy": "2025-12-05T21:09:59.204165Z",
+     "iopub.status.idle": "2025-12-05T21:09:59.254669Z",
+     "shell.execute_reply": "2025-12-05T21:09:59.254409Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1198,7 +1380,14 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "6591a59d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:59.256147Z",
+     "iopub.status.busy": "2025-12-05T21:09:59.256023Z",
+     "iopub.status.idle": "2025-12-05T21:09:59.357588Z",
+     "shell.execute_reply": "2025-12-05T21:09:59.357283Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1268,7 +1457,14 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "2962118f",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:59.359056Z",
+     "iopub.status.busy": "2025-12-05T21:09:59.358949Z",
+     "iopub.status.idle": "2025-12-05T21:09:59.361553Z",
+     "shell.execute_reply": "2025-12-05T21:09:59.361173Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1307,7 +1503,14 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "3e7334a8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:59.363041Z",
+     "iopub.status.busy": "2025-12-05T21:09:59.362850Z",
+     "iopub.status.idle": "2025-12-05T21:09:59.365671Z",
+     "shell.execute_reply": "2025-12-05T21:09:59.365391Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1353,7 +1556,14 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "e824ac64",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:59.366999Z",
+     "iopub.status.busy": "2025-12-05T21:09:59.366901Z",
+     "iopub.status.idle": "2025-12-05T21:09:59.368708Z",
+     "shell.execute_reply": "2025-12-05T21:09:59.368471Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
