--- a/examples/08_spike_field_basics.ipynb
+++ b/examples/08_spike_field_basics.ipynb
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "a3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-12T02:26:20.119016Z",
-     "iopub.status.busy": "2025-11-12T02:26:20.118744Z",
-     "iopub.status.idle": "2025-11-12T02:26:21.323127Z",
-     "shell.execute_reply": "2025-11-12T02:26:21.322846Z"
+     "iopub.execute_input": "2025-12-05T21:10:11.193245Z",
+     "iopub.status.busy": "2025-12-05T21:10:11.192846Z",
+     "iopub.status.idle": "2025-12-05T21:10:13.854064Z",
+     "shell.execute_reply": "2025-12-05T21:10:13.848662Z"
     }
    },
    "outputs": [],
@@ -124,14 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "a6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-12T02:26:21.324781Z",
-     "iopub.status.busy": "2025-11-12T02:26:21.324603Z",
-     "iopub.status.idle": "2025-11-12T02:26:21.472977Z",
-     "shell.execute_reply": "2025-11-12T02:26:21.472705Z"
+     "iopub.execute_input": "2025-12-05T21:10:13.864528Z",
+     "iopub.status.busy": "2025-12-05T21:10:13.863878Z",
+     "iopub.status.idle": "2025-12-05T21:10:22.062171Z",
+     "shell.execute_reply": "2025-12-05T21:10:22.061793Z"
     }
    },
    "outputs": [
@@ -220,14 +220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-12T02:26:21.474292Z",
-     "iopub.status.busy": "2025-11-12T02:26:21.474209Z",
-     "iopub.status.idle": "2025-11-12T02:26:21.478645Z",
-     "shell.execute_reply": "2025-11-12T02:26:21.478404Z"
+     "iopub.execute_input": "2025-12-05T21:10:22.063843Z",
+     "iopub.status.busy": "2025-12-05T21:10:22.063673Z",
+     "iopub.status.idle": "2025-12-05T21:10:22.092494Z",
+     "shell.execute_reply": "2025-12-05T21:10:22.090631Z"
     }
    },
    "outputs": [
@@ -267,9 +267,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "b6fbeea4",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:10:22.095709Z",
+     "iopub.status.busy": "2025-12-05T21:10:22.095583Z",
+     "iopub.status.idle": "2025-12-05T21:10:22.329459Z",
+     "shell.execute_reply": "2025-12-05T21:10:22.329158Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -376,9 +383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "c946f78c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:10:22.331449Z",
+     "iopub.status.busy": "2025-12-05T21:10:22.331330Z",
+     "iopub.status.idle": "2025-12-05T21:10:22.418347Z",
+     "shell.execute_reply": "2025-12-05T21:10:22.418039Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -443,14 +457,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "a10",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-12T02:26:21.479875Z",
-     "iopub.status.busy": "2025-11-12T02:26:21.479798Z",
-     "iopub.status.idle": "2025-11-12T02:26:21.488714Z",
-     "shell.execute_reply": "2025-11-12T02:26:21.488470Z"
+     "iopub.execute_input": "2025-12-05T21:10:22.419743Z",
+     "iopub.status.busy": "2025-12-05T21:10:22.419638Z",
+     "iopub.status.idle": "2025-12-05T21:10:22.579368Z",
+     "shell.execute_reply": "2025-12-05T21:10:22.579083Z"
     }
    },
    "outputs": [
@@ -461,6 +475,16 @@
       "Place field computed using diffusion KDE\n",
       "Peak firing rate: 7.06 Hz\n",
       "Valid bins: 309/309\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/edeno/Documents/GitHub/neurospatial/.venv/lib/python3.13/site-packages/scipy/sparse/linalg/_dsolve/linsolve.py:606: SparseEfficiencyWarning: splu converted its input to CSC format\n",
+      "  return splu(A).solve\n",
+      "/Users/edeno/Documents/GitHub/neurospatial/.venv/lib/python3.13/site-packages/scipy/sparse/linalg/_matfuncs.py:707: SparseEfficiencyWarning: spsolve is more efficient when sparse b is in the CSC matrix format\n",
+      "  return spsolve(Q, P)\n"
      ]
     }
    ],
@@ -498,9 +522,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "49830c36",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:10:22.580688Z",
+     "iopub.status.busy": "2025-12-05T21:10:22.580588Z",
+     "iopub.status.idle": "2025-12-05T21:10:22.739725Z",
+     "shell.execute_reply": "2025-12-05T21:10:22.739455Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -575,9 +606,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "c2cb43cd",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:10:22.741094Z",
+     "iopub.status.busy": "2025-12-05T21:10:22.740998Z",
+     "iopub.status.idle": "2025-12-05T21:10:22.769451Z",
+     "shell.execute_reply": "2025-12-05T21:10:22.769178Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -631,14 +669,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "a12",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-12T02:26:21.489932Z",
-     "iopub.status.busy": "2025-11-12T02:26:21.489849Z",
-     "iopub.status.idle": "2025-11-12T02:26:21.735072Z",
-     "shell.execute_reply": "2025-11-12T02:26:21.734775Z"
+     "iopub.execute_input": "2025-12-05T21:10:22.771056Z",
+     "iopub.status.busy": "2025-12-05T21:10:22.770937Z",
+     "iopub.status.idle": "2025-12-05T21:10:23.002775Z",
+     "shell.execute_reply": "2025-12-05T21:10:23.002500Z"
     }
    },
    "outputs": [
@@ -751,14 +789,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "a18",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-12T02:26:21.987090Z",
-     "iopub.status.busy": "2025-11-12T02:26:21.985804Z",
-     "iopub.status.idle": "2025-11-12T02:26:21.998167Z",
-     "shell.execute_reply": "2025-11-12T02:26:21.993255Z"
+     "iopub.execute_input": "2025-12-05T21:10:23.004500Z",
+     "iopub.status.busy": "2025-12-05T21:10:23.004380Z",
+     "iopub.status.idle": "2025-12-05T21:10:23.007063Z",
+     "shell.execute_reply": "2025-12-05T21:10:23.006831Z"
     }
    },
    "outputs": [
@@ -789,14 +827,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "a19",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-12T02:26:22.001825Z",
-     "iopub.status.busy": "2025-11-12T02:26:22.001571Z",
-     "iopub.status.idle": "2025-11-12T02:26:22.019161Z",
-     "shell.execute_reply": "2025-11-12T02:26:22.018066Z"
+     "iopub.execute_input": "2025-12-05T21:10:23.008316Z",
+     "iopub.status.busy": "2025-12-05T21:10:23.008218Z",
+     "iopub.status.idle": "2025-12-05T21:10:23.182151Z",
+     "shell.execute_reply": "2025-12-05T21:10:23.181874Z"
     }
    },
    "outputs": [
@@ -835,14 +873,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "a20",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-12T02:26:22.025958Z",
-     "iopub.status.busy": "2025-11-12T02:26:22.025614Z",
-     "iopub.status.idle": "2025-11-12T02:26:22.279041Z",
-     "shell.execute_reply": "2025-11-12T02:26:22.278747Z"
+     "iopub.execute_input": "2025-12-05T21:10:23.183514Z",
+     "iopub.status.busy": "2025-12-05T21:10:23.183397Z",
+     "iopub.status.idle": "2025-12-05T21:10:23.413320Z",
+     "shell.execute_reply": "2025-12-05T21:10:23.413018Z"
     }
    },
    "outputs": [
@@ -950,14 +988,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "a23",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-12T02:26:22.283848Z",
-     "iopub.status.busy": "2025-11-12T02:26:22.283680Z",
-     "iopub.status.idle": "2025-11-12T02:26:22.287359Z",
-     "shell.execute_reply": "2025-11-12T02:26:22.287022Z"
+     "iopub.execute_input": "2025-12-05T21:10:23.414894Z",
+     "iopub.status.busy": "2025-12-05T21:10:23.414779Z",
+     "iopub.status.idle": "2025-12-05T21:10:23.419421Z",
+     "shell.execute_reply": "2025-12-05T21:10:23.419186Z"
     }
    },
    "outputs": [
@@ -1000,14 +1038,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "a24",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-12T02:26:22.288674Z",
-     "iopub.status.busy": "2025-11-12T02:26:22.288581Z",
-     "iopub.status.idle": "2025-11-12T02:26:22.503237Z",
-     "shell.execute_reply": "2025-11-12T02:26:22.502975Z"
+     "iopub.execute_input": "2025-12-05T21:10:23.420640Z",
+     "iopub.status.busy": "2025-12-05T21:10:23.420543Z",
+     "iopub.status.idle": "2025-12-05T21:10:23.648151Z",
+     "shell.execute_reply": "2025-12-05T21:10:23.647862Z"
     }
    },
    "outputs": [
@@ -1109,14 +1147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "a27",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-12T02:26:22.504715Z",
-     "iopub.status.busy": "2025-11-12T02:26:22.504619Z",
-     "iopub.status.idle": "2025-11-12T02:26:22.507278Z",
-     "shell.execute_reply": "2025-11-12T02:26:22.506970Z"
+     "iopub.execute_input": "2025-12-05T21:10:23.649562Z",
+     "iopub.status.busy": "2025-12-05T21:10:23.649458Z",
+     "iopub.status.idle": "2025-12-05T21:10:23.652997Z",
+     "shell.execute_reply": "2025-12-05T21:10:23.652698Z"
     }
    },
    "outputs": [
@@ -1151,14 +1189,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "a28",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-12T02:26:22.508660Z",
-     "iopub.status.busy": "2025-11-12T02:26:22.508551Z",
-     "iopub.status.idle": "2025-11-12T02:26:22.597534Z",
-     "shell.execute_reply": "2025-11-12T02:26:22.597280Z"
+     "iopub.execute_input": "2025-12-05T21:10:23.654429Z",
+     "iopub.status.busy": "2025-12-05T21:10:23.654344Z",
+     "iopub.status.idle": "2025-12-05T21:10:23.749040Z",
+     "shell.execute_reply": "2025-12-05T21:10:23.748610Z"
     }
    },
    "outputs": [
@@ -1250,14 +1288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "a32",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-12T02:26:22.599199Z",
-     "iopub.status.busy": "2025-11-12T02:26:22.599084Z",
-     "iopub.status.idle": "2025-11-12T02:26:22.601627Z",
-     "shell.execute_reply": "2025-11-12T02:26:22.601367Z"
+     "iopub.execute_input": "2025-12-05T21:10:23.750714Z",
+     "iopub.status.busy": "2025-12-05T21:10:23.750591Z",
+     "iopub.status.idle": "2025-12-05T21:10:23.754075Z",
+     "shell.execute_reply": "2025-12-05T21:10:23.753645Z"
     }
    },
    "outputs": [
@@ -1288,14 +1326,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "a33",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-12T02:26:22.602934Z",
-     "iopub.status.busy": "2025-11-12T02:26:22.602844Z",
-     "iopub.status.idle": "2025-11-12T02:26:22.854309Z",
-     "shell.execute_reply": "2025-11-12T02:26:22.854051Z"
+     "iopub.execute_input": "2025-12-05T21:10:23.755410Z",
+     "iopub.status.busy": "2025-12-05T21:10:23.755328Z",
+     "iopub.status.idle": "2025-12-05T21:10:23.967282Z",
+     "shell.execute_reply": "2025-12-05T21:10:23.966986Z"
     }
    },
    "outputs": [
