--- a/examples/10_signal_processing_primitives.ipynb
+++ b/examples/10_signal_processing_primitives.ipynb
@@ -37,10 +37,10 @@
    "id": "72bb67d0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:36:33.557616Z",
-     "iopub.status.busy": "2025-11-10T13:36:33.557466Z",
-     "iopub.status.idle": "2025-11-10T13:36:34.679625Z",
-     "shell.execute_reply": "2025-11-10T13:36:34.679331Z"
+     "iopub.execute_input": "2025-12-05T21:10:35.712664Z",
+     "iopub.status.busy": "2025-12-05T21:10:35.712422Z",
+     "iopub.status.idle": "2025-12-05T21:10:37.141349Z",
+     "shell.execute_reply": "2025-12-05T21:10:37.141025Z"
     }
    },
    "outputs": [],
@@ -87,10 +87,10 @@
    "id": "5fef42a6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:36:34.681308Z",
-     "iopub.status.busy": "2025-11-10T13:36:34.681127Z",
-     "iopub.status.idle": "2025-11-10T13:36:34.720404Z",
-     "shell.execute_reply": "2025-11-10T13:36:34.720126Z"
+     "iopub.execute_input": "2025-12-05T21:10:37.143076Z",
+     "iopub.status.busy": "2025-12-05T21:10:37.142865Z",
+     "iopub.status.idle": "2025-12-05T21:10:37.185336Z",
+     "shell.execute_reply": "2025-12-05T21:10:37.184956Z"
     }
    },
    "outputs": [
@@ -173,13 +173,23 @@
    "id": "28c68fe3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:36:34.721674Z",
-     "iopub.status.busy": "2025-11-10T13:36:34.721582Z",
-     "iopub.status.idle": "2025-11-10T13:36:34.729199Z",
-     "shell.execute_reply": "2025-11-10T13:36:34.728936Z"
+     "iopub.execute_input": "2025-12-05T21:10:37.187132Z",
+     "iopub.status.busy": "2025-12-05T21:10:37.187012Z",
+     "iopub.status.idle": "2025-12-05T21:10:38.012358Z",
+     "shell.execute_reply": "2025-12-05T21:10:38.011837Z"
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/edeno/Documents/GitHub/neurospatial/.venv/lib/python3.13/site-packages/scipy/sparse/linalg/_dsolve/linsolve.py:606: SparseEfficiencyWarning: splu converted its input to CSC format\n",
+      "  return splu(A).solve\n",
+      "/Users/edeno/Documents/GitHub/neurospatial/.venv/lib/python3.13/site-packages/scipy/sparse/linalg/_matfuncs.py:707: SparseEfficiencyWarning: spsolve is more efficient when sparse b is in the CSC matrix format\n",
+      "  return spsolve(Q, P)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -219,10 +229,10 @@
    "id": "19c9c7b5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:36:34.730390Z",
-     "iopub.status.busy": "2025-11-10T13:36:34.730319Z",
-     "iopub.status.idle": "2025-11-10T13:36:34.916633Z",
-     "shell.execute_reply": "2025-11-10T13:36:34.916390Z"
+     "iopub.execute_input": "2025-12-05T21:10:38.014169Z",
+     "iopub.status.busy": "2025-12-05T21:10:38.014042Z",
+     "iopub.status.idle": "2025-12-05T21:10:38.289843Z",
+     "shell.execute_reply": "2025-12-05T21:10:38.289514Z"
     }
    },
    "outputs": [
@@ -308,10 +318,10 @@
    "id": "f3225c07",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:36:34.917885Z",
-     "iopub.status.busy": "2025-11-10T13:36:34.917803Z",
-     "iopub.status.idle": "2025-11-10T13:36:34.927042Z",
-     "shell.execute_reply": "2025-11-10T13:36:34.926810Z"
+     "iopub.execute_input": "2025-12-05T21:10:38.291432Z",
+     "iopub.status.busy": "2025-12-05T21:10:38.291341Z",
+     "iopub.status.idle": "2025-12-05T21:10:38.301401Z",
+     "shell.execute_reply": "2025-12-05T21:10:38.301101Z"
     }
    },
    "outputs": [],
@@ -332,10 +342,10 @@
    "id": "0fa71b38",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:36:34.928200Z",
-     "iopub.status.busy": "2025-11-10T13:36:34.928123Z",
-     "iopub.status.idle": "2025-11-10T13:36:35.176038Z",
-     "shell.execute_reply": "2025-11-10T13:36:35.175780Z"
+     "iopub.execute_input": "2025-12-05T21:10:38.302775Z",
+     "iopub.status.busy": "2025-12-05T21:10:38.302672Z",
+     "iopub.status.idle": "2025-12-05T21:10:38.592843Z",
+     "shell.execute_reply": "2025-12-05T21:10:38.592498Z"
     }
    },
    "outputs": [
@@ -417,17 +427,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "60e32e43",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:36:35.177433Z",
-     "iopub.status.busy": "2025-11-10T13:36:35.177331Z",
-     "iopub.status.idle": "2025-11-10T13:39:33.157148Z",
-     "shell.execute_reply": "2025-11-10T13:39:33.156621Z"
+     "iopub.execute_input": "2025-12-05T21:10:38.594407Z",
+     "iopub.status.busy": "2025-12-05T21:10:38.594296Z",
+     "iopub.status.idle": "2025-12-05T21:10:38.638961Z",
+     "shell.execute_reply": "2025-12-05T21:10:38.638682Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary occupancy: 579 bins visited\n",
+      "Smoothed occupancy: 579 reliably visited bins\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute binary occupancy\n",
     "occupancy = env.occupancy(times, positions, return_seconds=True)\n",
@@ -453,14 +472,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "deca221f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:39:33.158635Z",
-     "iopub.status.busy": "2025-11-10T13:39:33.158538Z",
-     "iopub.status.idle": "2025-11-10T13:39:33.327957Z",
-     "shell.execute_reply": "2025-11-10T13:39:33.326805Z"
+     "iopub.execute_input": "2025-12-05T21:10:38.640362Z",
+     "iopub.status.busy": "2025-12-05T21:10:38.640263Z",
+     "iopub.status.idle": "2025-12-05T21:10:38.822866Z",
+     "shell.execute_reply": "2025-12-05T21:10:38.822461Z"
     }
    },
    "outputs": [
@@ -535,14 +554,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9e5975e4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:39:33.330191Z",
-     "iopub.status.busy": "2025-11-10T13:39:33.330084Z",
-     "iopub.status.idle": "2025-11-10T13:42:38.757773Z",
-     "shell.execute_reply": "2025-11-10T13:42:38.757474Z"
+     "iopub.execute_input": "2025-12-05T21:10:38.824328Z",
+     "iopub.status.busy": "2025-12-05T21:10:38.824185Z",
+     "iopub.status.idle": "2025-12-05T21:10:38.869328Z",
+     "shell.execute_reply": "2025-12-05T21:10:38.869069Z"
     }
    },
    "outputs": [
@@ -590,14 +609,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5f53231b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:42:38.759427Z",
-     "iopub.status.busy": "2025-11-10T13:42:38.759311Z",
-     "iopub.status.idle": "2025-11-10T13:42:38.951780Z",
-     "shell.execute_reply": "2025-11-10T13:42:38.951483Z"
+     "iopub.execute_input": "2025-12-05T21:10:38.870633Z",
+     "iopub.status.busy": "2025-12-05T21:10:38.870547Z",
+     "iopub.status.idle": "2025-12-05T21:10:39.060562Z",
+     "shell.execute_reply": "2025-12-05T21:10:39.060183Z"
     }
    },
    "outputs": [
@@ -677,14 +696,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4ee91488",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:42:38.953370Z",
-     "iopub.status.busy": "2025-11-10T13:42:38.953249Z",
-     "iopub.status.idle": "2025-11-10T13:45:44.779926Z",
-     "shell.execute_reply": "2025-11-10T13:45:44.749029Z"
+     "iopub.execute_input": "2025-12-05T21:10:39.063411Z",
+     "iopub.status.busy": "2025-12-05T21:10:39.063283Z",
+     "iopub.status.idle": "2025-12-05T21:10:40.145321Z",
+     "shell.execute_reply": "2025-12-05T21:10:40.145061Z"
     }
    },
    "outputs": [
@@ -727,14 +746,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "64194490",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:45:44.799398Z",
-     "iopub.status.busy": "2025-11-10T13:45:44.799038Z",
-     "iopub.status.idle": "2025-11-10T13:45:45.174329Z",
-     "shell.execute_reply": "2025-11-10T13:45:45.174062Z"
+     "iopub.execute_input": "2025-12-05T21:10:40.146916Z",
+     "iopub.status.busy": "2025-12-05T21:10:40.146811Z",
+     "iopub.status.idle": "2025-12-05T21:10:40.346099Z",
+     "shell.execute_reply": "2025-12-05T21:10:40.345854Z"
     }
    },
    "outputs": [
