--- a/examples/19_real_data_bandit_task.ipynb
+++ b/examples/19_real_data_bandit_task.ipynb
@@ -889,6 +889,7 @@
     "    env_2d.animate_fields(\n",
     "        fields_animated,\n",
     "        overlays=overlays,\n",
+    "        frame_times=times_subsampled,\n",
     "        backend=\"napari\",\n",
     "        colormap=\"hot\",\n",
     "        title=f\"Unit {best_unit} Place Field - Interactive\",\n",
