--- a/examples/20_bayesian_decoding.ipynb
+++ b/examples/20_bayesian_decoding.ipynb
@@ -234,7 +234,7 @@
     "        spike_times_list[cell_idx],\n",
     "        times,\n",
     "        positions,\n",
-    "        method=\"diffusion_kde\",\n",
+    "        smoothing_method=\"diffusion_kde\",\n",
     "        bandwidth=5.0,\n",
     "    )\n",
     "\n",
@@ -285,7 +285,7 @@
     "            spike_times_list[i],\n",
     "            times,\n",
     "            positions,\n",
-    "            method=\"diffusion_kde\",\n",
+    "            smoothing_method=\"diffusion_kde\",\n",
     "            bandwidth=5.0,\n",
     "        )\n",
     "        for i in range(n_neurons)\n",
