--- a/examples/02_layout_engines.ipynb
+++ b/examples/02_layout_engines.ipynb
@@ -52,7 +52,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "b4",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:29.147717Z",
+     "iopub.status.busy": "2025-12-05T21:09:29.147625Z",
+     "iopub.status.idle": "2025-12-05T21:09:30.878672Z",
+     "shell.execute_reply": "2025-12-05T21:09:30.878371Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -79,7 +86,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "b6",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:30.880545Z",
+     "iopub.status.busy": "2025-12-05T21:09:30.880320Z",
+     "iopub.status.idle": "2025-12-05T21:09:30.890293Z",
+     "shell.execute_reply": "2025-12-05T21:09:30.889995Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -99,7 +113,7 @@
     "\n",
     "# Create regular grid environment\n",
     "env_regular = Environment.from_samples(\n",
-    "    data_samples=square_data, bin_size=5.0, name=\"RegularGrid\"\n",
+    "    positions=square_data, bin_size=5.0, name=\"RegularGrid\"\n",
     ")\n",
     "\n",
     "print(\"Regular Grid Environment:\")\n",
@@ -122,7 +136,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "b8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:30.891762Z",
+     "iopub.status.busy": "2025-12-05T21:09:30.891654Z",
+     "iopub.status.idle": "2025-12-05T21:09:30.904871Z",
+     "shell.execute_reply": "2025-12-05T21:09:30.904534Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -136,7 +157,7 @@
    "source": [
     "# Orthogonal neighbors only (4-connectivity in 2D)\n",
     "env_orthogonal = Environment.from_samples(\n",
-    "    data_samples=square_data,\n",
+    "    positions=square_data,\n",
     "    bin_size=5.0,\n",
     "    connect_diagonal_neighbors=False,\n",
     "    name=\"Orthogonal\",\n",
@@ -144,7 +165,7 @@
     "\n",
     "# Include diagonal neighbors (8-connectivity in 2D)\n",
     "env_diagonal = Environment.from_samples(\n",
-    "    data_samples=square_data,\n",
+    "    positions=square_data,\n",
     "    bin_size=5.0,\n",
     "    connect_diagonal_neighbors=True,\n",
     "    name=\"Diagonal\",\n",
@@ -159,7 +180,14 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "b9",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:30.906555Z",
+     "iopub.status.busy": "2025-12-05T21:09:30.906422Z",
+     "iopub.status.idle": "2025-12-05T21:09:31.214388Z",
+     "shell.execute_reply": "2025-12-05T21:09:31.214085Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -216,7 +244,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "b12",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:31.216432Z",
+     "iopub.status.busy": "2025-12-05T21:09:31.216293Z",
+     "iopub.status.idle": "2025-12-05T21:09:31.222401Z",
+     "shell.execute_reply": "2025-12-05T21:09:31.222080Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -232,8 +267,8 @@
    "source": [
     "# Create hexagonal environment\n",
     "env_hex = Environment.from_samples(\n",
-    "    data_samples=square_data,\n",
-    "    layout_kind=\"Hexagonal\",  # Specify layout type\n",
+    "    positions=square_data,\n",
+    "    layout=\"Hexagonal\",  # Specify layout type\n",
     "    bin_size=5.0,  # This is the hexagon width (flat-to-flat distance)\n",
     "    name=\"Hexagonal\",\n",
     ")\n",
@@ -248,7 +283,15 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "b13",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:31.223857Z",
+     "iopub.status.busy": "2025-12-05T21:09:31.223764Z",
+     "iopub.status.idle": "2025-12-05T21:09:31.409492Z",
+     "shell.execute_reply": "2025-12-05T21:09:31.408906Z"
+    },
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "data": {
@@ -282,7 +325,9 @@
   {
    "cell_type": "markdown",
    "id": "b14",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "### Neighbor Distance Analysis\n",
     "\n",
@@ -293,7 +338,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "b15",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:31.411460Z",
+     "iopub.status.busy": "2025-12-05T21:09:31.411343Z",
+     "iopub.status.idle": "2025-12-05T21:09:31.415016Z",
+     "shell.execute_reply": "2025-12-05T21:09:31.414590Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -341,7 +393,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "b16",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:31.417606Z",
+     "iopub.status.busy": "2025-12-05T21:09:31.417472Z",
+     "iopub.status.idle": "2025-12-05T21:09:31.488194Z",
+     "shell.execute_reply": "2025-12-05T21:09:31.487820Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -437,7 +496,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "b20",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:31.490127Z",
+     "iopub.status.busy": "2025-12-05T21:09:31.489992Z",
+     "iopub.status.idle": "2025-12-05T21:09:31.504343Z",
+     "shell.execute_reply": "2025-12-05T21:09:31.503996Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -471,7 +537,14 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "b21",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:31.506195Z",
+     "iopub.status.busy": "2025-12-05T21:09:31.506068Z",
+     "iopub.status.idle": "2025-12-05T21:09:31.818042Z",
+     "shell.execute_reply": "2025-12-05T21:09:31.817472Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -508,7 +581,14 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "b23",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:31.820777Z",
+     "iopub.status.busy": "2025-12-05T21:09:31.820647Z",
+     "iopub.status.idle": "2025-12-05T21:09:31.831555Z",
+     "shell.execute_reply": "2025-12-05T21:09:31.830912Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -565,7 +645,14 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "b24",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:31.833595Z",
+     "iopub.status.busy": "2025-12-05T21:09:31.833474Z",
+     "iopub.status.idle": "2025-12-05T21:09:31.996477Z",
+     "shell.execute_reply": "2025-12-05T21:09:31.996214Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -601,7 +688,14 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "b26",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:31.998060Z",
+     "iopub.status.busy": "2025-12-05T21:09:31.997935Z",
+     "iopub.status.idle": "2025-12-05T21:09:32.018183Z",
+     "shell.execute_reply": "2025-12-05T21:09:32.017820Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Generate data inside a circle\n",
@@ -619,14 +713,14 @@
     "\n",
     "envs_comparison = {\n",
     "    \"Regular Grid\\n(from_samples)\": Environment.from_samples(\n",
-    "        data_samples=circle_data, bin_size=4.0, name=\"Regular\"\n",
+    "        positions=circle_data, bin_size=4.0, name=\"Regular\"\n",
     "    ),\n",
     "    \"Regular Grid\\n(from_polygon)\": Environment.from_polygon(\n",
     "        polygon=circle_polygon, bin_size=4.0, name=\"RegularPoly\"\n",
     "    ),\n",
     "    \"Hexagonal\\n(from_samples)\": Environment.from_samples(\n",
-    "        data_samples=circle_data,\n",
-    "        layout_kind=\"Hexagonal\",\n",
+    "        positions=circle_data,\n",
+    "        layout=\"Hexagonal\",\n",
     "        bin_size=4.0,\n",
     "        name=\"HexSamples\",\n",
     "    ),\n",
@@ -637,7 +731,14 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "b27",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:32.020511Z",
+     "iopub.status.busy": "2025-12-05T21:09:32.020397Z",
+     "iopub.status.idle": "2025-12-05T21:09:32.484392Z",
+     "shell.execute_reply": "2025-12-05T21:09:32.483907Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -696,7 +797,14 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "b30",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-05T21:09:32.486280Z",
+     "iopub.status.busy": "2025-12-05T21:09:32.486183Z",
+     "iopub.status.idle": "2025-12-05T21:09:32.502237Z",
+     "shell.execute_reply": "2025-12-05T21:09:32.501924Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -709,7 +817,7 @@
    "source": [
     "# Regular grid parameters\n",
     "env1 = Environment.from_samples(\n",
-    "    data_samples=square_data,\n",
+    "    positions=square_data,\n",
     "    bin_size=5.0,  # Size of bins\n",
     "    connect_diagonal_neighbors=True,  # Include diagonal connections\n",
     "    infer_active_bins=True,  # Auto-detect active bins\n",
@@ -719,8 +827,8 @@
     "\n",
     "# Hexagonal parameters\n",
     "env2 = Environment.from_samples(\n",
-    "    data_samples=square_data,\n",
-    "    layout_kind=\"Hexagonal\",\n",
+    "    positions=square_data,\n",
+    "    layout=\"Hexagonal\",\n",
     "    bin_size=5.0,  # Hexagon width (flat-to-flat)\n",
     "    infer_active_bins=True,\n",
     "    name=\"HexConfigured\",\n",
