--- a/examples/09_differential_operators.ipynb
+++ b/examples/09_differential_operators.ipynb
@@ -44,10 +44,10 @@
    "id": "6e0bb352",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:29:33.376152Z",
-     "iopub.status.busy": "2025-11-10T13:29:33.375984Z",
-     "iopub.status.idle": "2025-11-10T13:29:34.549413Z",
-     "shell.execute_reply": "2025-11-10T13:29:34.549137Z"
+     "iopub.execute_input": "2025-12-05T21:10:26.955552Z",
+     "iopub.status.busy": "2025-12-05T21:10:26.955440Z",
+     "iopub.status.idle": "2025-12-05T21:10:29.763579Z",
+     "shell.execute_reply": "2025-12-05T21:10:29.761540Z"
     }
    },
    "outputs": [],
@@ -78,10 +78,10 @@
    "id": "14370f95",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:29:34.550999Z",
-     "iopub.status.busy": "2025-11-10T13:29:34.550828Z",
-     "iopub.status.idle": "2025-11-10T13:29:34.569361Z",
-     "shell.execute_reply": "2025-11-10T13:29:34.569111Z"
+     "iopub.execute_input": "2025-12-05T21:10:29.771228Z",
+     "iopub.status.busy": "2025-12-05T21:10:29.770904Z",
+     "iopub.status.idle": "2025-12-05T21:10:29.799851Z",
+     "shell.execute_reply": "2025-12-05T21:10:29.798641Z"
     }
    },
    "outputs": [
@@ -184,10 +184,10 @@
    "id": "f6460da5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:29:34.589153Z",
-     "iopub.status.busy": "2025-11-10T13:29:34.589015Z",
-     "iopub.status.idle": "2025-11-10T13:29:34.593585Z",
-     "shell.execute_reply": "2025-11-10T13:29:34.593347Z"
+     "iopub.execute_input": "2025-12-05T21:10:29.824984Z",
+     "iopub.status.busy": "2025-12-05T21:10:29.824826Z",
+     "iopub.status.idle": "2025-12-05T21:10:29.831677Z",
+     "shell.execute_reply": "2025-12-05T21:10:29.830742Z"
     }
    },
    "outputs": [
@@ -242,10 +242,10 @@
    "id": "7e80b8e7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:29:34.594789Z",
-     "iopub.status.busy": "2025-11-10T13:29:34.594704Z",
-     "iopub.status.idle": "2025-11-10T13:29:34.751294Z",
-     "shell.execute_reply": "2025-11-10T13:29:34.750966Z"
+     "iopub.execute_input": "2025-12-05T21:10:29.836203Z",
+     "iopub.status.busy": "2025-12-05T21:10:29.836008Z",
+     "iopub.status.idle": "2025-12-05T21:10:30.079104Z",
+     "shell.execute_reply": "2025-12-05T21:10:30.077152Z"
     }
    },
    "outputs": [
@@ -369,10 +369,10 @@
    "id": "4b2f32df",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:29:34.752720Z",
-     "iopub.status.busy": "2025-11-10T13:29:34.752628Z",
-     "iopub.status.idle": "2025-11-10T13:29:34.755076Z",
-     "shell.execute_reply": "2025-11-10T13:29:34.754770Z"
+     "iopub.execute_input": "2025-12-05T21:10:30.084844Z",
+     "iopub.status.busy": "2025-12-05T21:10:30.084468Z",
+     "iopub.status.idle": "2025-12-05T21:10:30.092870Z",
+     "shell.execute_reply": "2025-12-05T21:10:30.090730Z"
     }
    },
    "outputs": [
@@ -425,10 +425,10 @@
    "id": "65098aa7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:29:34.756451Z",
-     "iopub.status.busy": "2025-11-10T13:29:34.756343Z",
-     "iopub.status.idle": "2025-11-10T13:29:34.832938Z",
-     "shell.execute_reply": "2025-11-10T13:29:34.832670Z"
+     "iopub.execute_input": "2025-12-05T21:10:30.099165Z",
+     "iopub.status.busy": "2025-12-05T21:10:30.098934Z",
+     "iopub.status.idle": "2025-12-05T21:10:30.214113Z",
+     "shell.execute_reply": "2025-12-05T21:10:30.211487Z"
     }
    },
    "outputs": [
@@ -516,10 +516,10 @@
    "id": "1d393696",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:29:34.834275Z",
-     "iopub.status.busy": "2025-11-10T13:29:34.834173Z",
-     "iopub.status.idle": "2025-11-10T13:29:34.996367Z",
-     "shell.execute_reply": "2025-11-10T13:29:34.995586Z"
+     "iopub.execute_input": "2025-12-05T21:10:30.220347Z",
+     "iopub.status.busy": "2025-12-05T21:10:30.219968Z",
+     "iopub.status.idle": "2025-12-05T21:10:30.285932Z",
+     "shell.execute_reply": "2025-12-05T21:10:30.284391Z"
     }
    },
    "outputs": [
@@ -530,6 +530,16 @@
       "Original field std: 0.932\n",
       "Laplacian smoothed std: 15582337.521\n",
       "Gaussian smoothed std: 0.004\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/edeno/Documents/GitHub/neurospatial/.venv/lib/python3.13/site-packages/scipy/sparse/linalg/_dsolve/linsolve.py:606: SparseEfficiencyWarning: splu converted its input to CSC format\n",
+      "  return splu(A).solve\n",
+      "/Users/edeno/Documents/GitHub/neurospatial/.venv/lib/python3.13/site-packages/scipy/sparse/linalg/_matfuncs.py:707: SparseEfficiencyWarning: spsolve is more efficient when sparse b is in the CSC matrix format\n",
+      "  return spsolve(Q, P)\n"
      ]
     }
    ],
@@ -579,10 +589,10 @@
    "id": "da47ec04",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:29:35.004230Z",
-     "iopub.status.busy": "2025-11-10T13:29:35.003968Z",
-     "iopub.status.idle": "2025-11-10T13:29:35.250765Z",
-     "shell.execute_reply": "2025-11-10T13:29:35.250503Z"
+     "iopub.execute_input": "2025-12-05T21:10:30.294217Z",
+     "iopub.status.busy": "2025-12-05T21:10:30.293672Z",
+     "iopub.status.idle": "2025-12-05T21:10:30.656333Z",
+     "shell.execute_reply": "2025-12-05T21:10:30.655194Z"
     }
    },
    "outputs": [
@@ -673,10 +683,10 @@
    "id": "7cf10394",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:29:35.252317Z",
-     "iopub.status.busy": "2025-11-10T13:29:35.252212Z",
-     "iopub.status.idle": "2025-11-10T13:29:35.255604Z",
-     "shell.execute_reply": "2025-11-10T13:29:35.255369Z"
+     "iopub.execute_input": "2025-12-05T21:10:30.660897Z",
+     "iopub.status.busy": "2025-12-05T21:10:30.660669Z",
+     "iopub.status.idle": "2025-12-05T21:10:30.670094Z",
+     "shell.execute_reply": "2025-12-05T21:10:30.667082Z"
     }
    },
    "outputs": [
@@ -739,10 +749,10 @@
    "id": "507d805f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:29:35.257134Z",
-     "iopub.status.busy": "2025-11-10T13:29:35.257026Z",
-     "iopub.status.idle": "2025-11-10T13:29:35.259894Z",
-     "shell.execute_reply": "2025-11-10T13:29:35.259607Z"
+     "iopub.execute_input": "2025-12-05T21:10:30.676103Z",
+     "iopub.status.busy": "2025-12-05T21:10:30.675675Z",
+     "iopub.status.idle": "2025-12-05T21:10:30.682675Z",
+     "shell.execute_reply": "2025-12-05T21:10:30.681067Z"
     }
    },
    "outputs": [
@@ -791,10 +801,10 @@
    "id": "990eeaea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:29:35.261318Z",
-     "iopub.status.busy": "2025-11-10T13:29:35.261234Z",
-     "iopub.status.idle": "2025-11-10T13:29:35.296021Z",
-     "shell.execute_reply": "2025-11-10T13:29:35.295770Z"
+     "iopub.execute_input": "2025-12-05T21:10:30.687451Z",
+     "iopub.status.busy": "2025-12-05T21:10:30.687173Z",
+     "iopub.status.idle": "2025-12-05T21:10:30.737776Z",
+     "shell.execute_reply": "2025-12-05T21:10:30.735749Z"
     }
    },
    "outputs": [
@@ -855,10 +865,10 @@
    "id": "a31c6822",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:29:35.297301Z",
-     "iopub.status.busy": "2025-11-10T13:29:35.297209Z",
-     "iopub.status.idle": "2025-11-10T13:29:35.299545Z",
-     "shell.execute_reply": "2025-11-10T13:29:35.299346Z"
+     "iopub.execute_input": "2025-12-05T21:10:30.741706Z",
+     "iopub.status.busy": "2025-12-05T21:10:30.741514Z",
+     "iopub.status.idle": "2025-12-05T21:10:30.747124Z",
+     "shell.execute_reply": "2025-12-05T21:10:30.746195Z"
     }
    },
    "outputs": [
@@ -907,10 +917,10 @@
    "id": "b5a38691",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-10T13:29:35.300692Z",
-     "iopub.status.busy": "2025-11-10T13:29:35.300626Z",
-     "iopub.status.idle": "2025-11-10T13:29:35.387761Z",
-     "shell.execute_reply": "2025-11-10T13:29:35.385444Z"
+     "iopub.execute_input": "2025-12-05T21:10:30.755380Z",
+     "iopub.status.busy": "2025-12-05T21:10:30.755139Z",
+     "iopub.status.idle": "2025-12-05T21:10:30.898184Z",
+     "shell.execute_reply": "2025-12-05T21:10:30.896820Z"
     }
    },
    "outputs": [
